--- a/app/views/static_pages/onboarding.html.erb
+++ b/app/views/static_pages/onboarding.html.erb
@@ -1,1 +1,74 @@
-onboarding.html.erb
+<% content_for :body_class, "tutorial-page tutorial-page--full-height" %>
+<% content_for :body_id, "onboarding-walkthrough" %>
+
+<div id="slides">
+  <ul class="slides-container">
+    <li>
+      <img src="/assets/onboarding-backdrop.jpg" alt="">
+      <div class="container">
+        <h1 class="slides__title">Play free games. Earn real cash.</h1>
+        <div class="slides__tut-img" style="background-image: url(/assets/onboarding_1.png);">
+        </div>
+        <div class="secondary-copy">
+            <h2 class="secondary__cap">Play Free Games</h2>
+            <p class="secondary__desc">Play all your favorite games here, in one place. You earn our currency in the form of credits by playing any of our games on any device.</p>
+        </div><!-- /.secondary-copy -->
+      </div>
+    </li>
+    <li>
+      <img src="/assets/onboarding-backdrop.jpg" alt="">
+      <div class="container">
+        <h1 class="slides__title">Play free games. Earn real cash.</h1>
+        <div class="slides__tut-img dial" style="background-image: url(/assets/onboarding_2.png);">
+        </div>
+        <div class="secondary-copy">
+            <h2 class="secondary__cap">Earn Credits</h2>
+            <p class="secondary__desc">Play all your favorite games here, in one place. You earn our currency in the form of credits by playing any of our games on any device.</p>
+        </div><!-- /.secondary-copy -->
+      </div>
+    </li>
+    <li>
+      <img src="/assets/onboarding-backdrop.jpg" alt="">
+      <div class="container">
+        <h1 class="slides__title">Play free games. Earn real cash.</h1>
+        <div class="slides__tut-img dollars" style="background-image: url(/assets/onboarding_3.png);">
+        </div>
+        <div class="secondary-copy">
+            <h2 class="secondary__cap">Redeem Credits</h2>
+            <p class="secondary__desc">Play all your favorite games here, in one place. You earn our currency in the form of credits by playing any of our games on any device.</p>
+        </div><!-- /.secondary-copy -->
+      </div>
+    </li>
+  </ul>
+  <nav class="slides-navigation">
+    <a href="#" class="next slides__control">Next</a>
+    <a href="#" class="prev slides__control">Previous</a>
+  </nav>
+</div>
+
+<script>
+  $(function() {
+    if (mobileCheck.any()) {
+      $('.slides__control').hide();
+    }
+
+    $('#slides').superslides({
+      hashchange: true
+    });
+
+
+    $(".tutorial-page").swipe({
+      swipeLeft:function(event, direction, distance, duration, fingerCount) {
+        console.log("You swiped " + direction );
+        $('#slides').superslides('animate','next');
+      }
+    });
+
+    $(".tutorial-page").swipe({
+      swipeRight:function(event, direction, distance, duration, fingerCount) {
+        console.log("You swiped " + direction );
+        $('#slides').superslides('animate','prev');
+      }
+    });
+  });
+</script>
