--- a/app/views/static_pages/donate.html.erb
+++ b/app/views/static_pages/donate.html.erb
@@ -4,8 +4,8 @@
   <h1 class="interior-hero__title">Balance: <span class='credits'>
         <%= current_user.credits.blank? ? "0" : current_user.credits %> credits</span></h1>
   <p class="interior-hero__desc">
-    Your support provides food, shelter, and expert medical care for thousands of animals and allows us to speak out for countless others. Thank you!
-    <span class="byline">-PAWS</span>
+    The American Red Cross is a humanitarian organization that provides emergency assistance, disaster relief and education inside the United States.
+    <span class="byline"></span><!-- /fill in with name of charity -->
   </p>
 
 </div> <!--/.interior-hero -->
