--- a/app/views/static_pages/new_donation.html.erb
+++ b/app/views/static_pages/new_donation.html.erb
@@ -2,6 +2,6 @@
 
 <% provide(:title, 'Thanks!') %>
 <div class='confirmation--donate'>
-  <h2 class="confirmation__copy">Thank you for your donation to PAWS. We will review your request and confirm your donation within 24 hours.</h2>
+  <h2 class="confirmation__copy">Thank you for your donation to The American Red Cross. We will review your request and confirm your donation within 24 hours.</h2>
   <a href="/games" class="btn-purple confirmation__btn">Return to Games</a>
 </div>
