--- a/app/views/static_pages/redeem.html.erb
+++ b/app/views/static_pages/redeem.html.erb
@@ -9,7 +9,7 @@
 <div class='interior-body'>
   <div class="donations">
     <div class="donations__wrapper">
-      <h1 class="donations__caption">Get in the spirit of giving and support PAWS for the holidays!</h1>
+      <h1 class="donations__caption">Get in the spirit of giving and support The American Red Cross</h1>
       <a class="donations__link donations__link--holiday" href="/donate">Donate Credits</a>
     </div>
   </div>
