--- a/app/views/user_notifier/send_donation_email.html.erb
+++ b/app/views/user_notifier/send_donation_email.html.erb
@@ -10,7 +10,7 @@ Credits: <%= @cash_out.credits %><br />
 
 Cash: <%= @cash_out.cash %><br />
 
-Cash Out Type: Donate - PAWS <br />
+Cash Out Type: Donate - The American Red Cross <br />
 
 
 
