--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -343,10 +343,10 @@ textarea {
 
         &.featured-item {
             font-size: 22px;
-            background-image: url(/assets/paws_4.jpg);
+            background-image: url(/assets/red_cross.png);
             min-height: 110px;
             background-position: 90% center;
-            background-size: 50%;
+            background-size: 20%;
             background-repeat: no-repeat;
 
             .featured-title {
@@ -377,27 +377,19 @@ textarea {
             &:first-of-type {
                 li {
                     background-size: 40%;
-                    .fa-angle-right {
-                        color: $white;
-                    }
                 }
             }
         }
         .list-item__title {
             font-size: 18px;
             display: inline-block;
-            margin: 20px 0 5px;
+            margin: 5px 0;
         }
-        .cash-out__cost {
-            font-size: 16px;
+        .list-item__title--sm {
+            font-size: 14px;
         }
         li {
-            background-image: url(/assets/paws_4.jpg);
-            height: 90px;
-            background-size: 50%;
-            background-position: center right;
-            background-repeat: no-repeat;
-            padding-left: 15px;
+            height: 40px;
 
             .fa-angle-right {
                 bottom: 35px;
@@ -433,9 +425,9 @@ textarea {
             }
         }
         .inner-page__banner {
-            background-image: url(/assets/paws_4.jpg);
-            background-size: 55%;
-            background-position: center bottom;
+            background-image: url(/assets/red_cross.png);
+            background-size: 35%;
+            background-position: center 90%;
             height: 250px;
             position: relative;
             background-repeat: no-repeat;
