--- a/app/views/static_pages/donate_credits.html.erb
+++ b/app/views/static_pages/donate_credits.html.erb
@@ -4,13 +4,13 @@
   <h1 class="interior-hero__title">Balance: <span class='credits'>
         <%= current_user.credits.blank? ? "0" : current_user.credits %> credits</span></h1>
   <p class="interior-hero__desc">
-    Your support provides food, shelter, and expert medical care for thousands of animals and allows us to speak out for countless others. Thank you!
-    <span class="byline">-PAWS</span>
+    The American Red Cross is a humanitarian organization that provides emergency assistance, disaster relief and education inside the United States.
+    <span class="byline"></span><!-- /insert name of charity -->
   </p>
 
 </div> <!--/.interior-hero -->
 
-<h1 class="donations__caption donations__caption--checkout">Confirm that you would like to redeem <%= @amount %> credits for a $<%= @dollar_amt %> donation to PAWS.</h1>
+<h1 class="donations__caption donations__caption--checkout">Confirm that you would like to redeem <%= @amount %> credits for a $<%= @dollar_amt %> donation to The American Red Cross.</h1>
 
 <div class="donations__final-step">
 <%= form_for(@cash_out, url:{:controller=>'static_pages', :action=>'new_donation'}) do |f| %>
