--- a/app/views/static_pages/redeem_mobile.html.erb
+++ b/app/views/static_pages/redeem_mobile.html.erb
@@ -18,7 +18,7 @@
 	<ul>
 			<a href="/donate">
 				<li class="featured-item">
-					<h1 class="featured-title">Support PAWS for the Holidays</h1>
+					<h1 class="featured-title">Support The American Red Cross</h1>
 					<i class="fa fa-angle-right"></i>
 				</li>
 			</a>
