--- a/app/views/static_pages/redeem.html.erb
+++ b/app/views/static_pages/redeem.html.erb
@@ -3,7 +3,7 @@
 <div class="interior-hero">
   <h1 class="interior-hero__title">Balance: <span class='credits'>
         <%= current_user.credits.blank? ? "0" : current_user.credits %> credits</span></h1>
-  <p class="interior-hero__desc">Redeem your credits. Once you've earned enough credits, trade them in for cash!</p>
+  <p class="interior-hero__desc">Redeem your credits. Once you have earned enough credits, trade them in for cash or donate their value to charity!</p>
 </div> <!--/.interior-hero -->
 
 <div class='interior-body'>
@@ -15,7 +15,7 @@
   </div>
 
   <section class="card-container">
-    <p class="interior-body__caption">Choose credits for cashout</p>
+    <p class="interior-body__caption">Or​ redeem your credits for cash</p>
     <%= link_to redeem_credits_path(credits: 1000) do %>
       <div class="card-tout">
         <div class="card-inner">
