--- a/app/views/static_pages/onboarding.html.erb
+++ b/app/views/static_pages/onboarding.html.erb
@@ -12,6 +12,7 @@
         <div class="secondary-copy">
             <h2 class="secondary__cap">Play Free Games</h2>
             <p class="secondary__desc">Play all your favorite games here, in one place. You earn our currency in the form of credits by playing any of our games on any device.</p>
+            <button class="nav-btn js-next-slide">How Luckee Works</button>
         </div><!-- /.secondary-copy -->
       </div>
     </li>
@@ -23,7 +24,8 @@
         </div>
         <div class="secondary-copy">
             <h2 class="secondary__cap">Earn Credits</h2>
-            <p class="secondary__desc">Play all your favorite games here, in one place. You earn our currency in the form of credits by playing any of our games on any device.</p>
+            <p class="secondary__desc">Accumulate credits by playing games. Once you have earned enough credits you can redeem them for rewards.</p>
+            <button class="nav-btn js-next-slide">Next</button>
         </div><!-- /.secondary-copy -->
       </div>
     </li>
@@ -35,7 +37,8 @@
         </div>
         <div class="secondary-copy">
             <h2 class="secondary__cap">Redeem Credits</h2>
-            <p class="secondary__desc">Play all your favorite games here, in one place. You earn our currency in the form of credits by playing any of our games on any device.</p>
+            <p class="secondary__desc">Redeem your credits for rewards such as cash, or even better, you can donate the value of your credits to charity!</p>
+            <button class="nav-btn"><a href="/">Get Started</a></button>
         </div><!-- /.secondary-copy -->
       </div>
     </li>
@@ -63,6 +66,10 @@
         $('#slides').superslides('animate','next');
       }
     });
+
+    $('.js-next-slide').click(function(){
+      $('#slides').superslides('animate','next');
+    })
 
     $(".tutorial-page").swipe({
       swipeRight:function(event, direction, distance, duration, fingerCount) {
