--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -179,6 +179,7 @@
                 <a href="/" class="js-overlay__opt-out overlay__opt-out ga-preview-event">Preview in Browser</a>
                 <a href="/" class="overlay__back-to-dash"><img class="home-icon--small" src="/assets/home_icon.png"></a>
                 <div class="overlay__content">
+                    <p>The browser bars at the top &amp; bottom of the screen interfere with gaming, add Luckee to make them go away.</p>
                     <img class="overlay__logo" src="/assets/logo-144.png">
                     <h1 class="overlay__title">Luckee</h1>
                     <p>To install, tap <img class="overlay__bookmark" src="/assets/bookmark.png"> and choose</p>
