--- a/app/assets/stylesheets/superslides.css.scss
+++ b/app/assets/stylesheets/superslides.css.scss
@@ -159,8 +159,8 @@ $orange-2048: #ffb400;
     margin-bottom: 10px;
 }
 .nav-btn {
-    padding: 7.5px 0;
-    width: 175px;
+    padding: 10px 0;
+    width: 100%;
     background-color: $lavender;
     border: none;
     color: $white;
@@ -173,12 +173,28 @@ $orange-2048: #ffb400;
     }
 }
 #onboarding-walkthrough {
+    .container {
+        @include vertical-align();
+    }
     .slides__title {
         text-transform: none;
         color: #A8A4E2;
         font-weight: 400;
         font-size: 18px;
-        margin: 30px 0;
+        margin: 0 0 30px;
+        position: relative;
+
+        &::after {
+            // content: '';
+            // position: absolute;
+            // width: 10%;
+            // height: 2px;
+            // background-color: #A8A4E2;
+            // bottom: -10px;
+            // margin: auto;
+            // left: 0;
+            // right: 0;
+        }
     }
     .slides__tut-img {
         height: 40vw;
