--- a/app/views/static_pages/onboarding.html.erb
+++ b/app/views/static_pages/onboarding.html.erb
@@ -12,7 +12,7 @@
         <div class="secondary-copy">
             <h2 class="secondary__cap">Play Free Games</h2>
             <p class="secondary__desc">Play all your favorite games here, in one place. You earn our currency in the form of credits by playing any of our games on any device.</p>
-            <button class="nav-btn js-next-slide">How Luckee Works</button>
+            <button class="nav-btn js-next-slide">Next</button>
         </div><!-- /.secondary-copy -->
       </div>
     </li>
@@ -38,7 +38,7 @@
         <div class="secondary-copy">
             <h2 class="secondary__cap">Redeem Credits</h2>
             <p class="secondary__desc">Redeem your credits for rewards such as cash, or even better, you can donate the value of your credits to charity!</p>
-            <button class="nav-btn"><a href="/">Get Started</a></button>
+            <%= link_to root_path do %><button class="nav-btn">Get Started</button><% end %>
         </div><!-- /.secondary-copy -->
       </div>
     </li>
