--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -1215,6 +1215,9 @@ p {
     }
 }
 
+.overlay__down-arrow {
+    display: none !important;
+}
 
 // Overlays
 @media (max-width: 700px) {
@@ -1264,22 +1267,37 @@ p {
             background-size: cover;
             z-index: 100;
             text-align: center;
+
+            .overlay__down-arrow {
+                font-size: 2em;
+                position: absolute;
+                bottom: 20%;
+                margin-left: -7px;
+                left: 50%;
+                display: inline-block !important;
+                @include floating();
+            }
         }
         .overlay__content {
             display: block;
-            // @include vertical-align();
-            padding: 20% 10px 25%;
+            @include vertical-align();
+            padding: 0 5%;
+            // padding: 20% 10px 25%;
             font-size: 16px;
+            margin-top: -40px;
             &.hide {
                 display: none;
             }
             p {
-                font-size: 1em;
+                font-size: 0.9em;
+                line-height: 1.25em;
             }
         }
         .overlay__logo {
-            border-radius: 15px;
+            border-radius: 10px;
             display: block;
+            height: 100px;
+            width: auto;
             margin: 20px auto 20px;
         }
         .overlay__title {
@@ -1299,14 +1317,6 @@ p {
             position: relative;
             bottom: 3px;
             margin: 0 2px;
-        }
-        .overlay__down-arrow {
-            font-size: 2em;
-            position: absolute;
-            bottom: 20%;
-            margin-left: -7px;
-            left: 50%;
-            @include floating();
         }
         .overlay__opt-out {
             display: inline-block;
