--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -170,16 +170,11 @@
         <% end %>
 
         <div <%= "id=#{@mobile_container_id}" if @mobile_container_id %> class='mobile-container <% if !signed_in? %>with-money<% end %>' style="width:100%;">
-            <div class="desktop--modal">
-                <h1 class="modal__title">Welcome to Luckee</h1>
-                <p class="modal__copy">Our desktop site is currently under construction. We have enabled our mobile site on desktop, so you can proceed, but it may look a little goofy for now. Please visit the site on mobile for the best experience, or continue to the temporary desktop site and we will have our new desktop site up for your ASAP.</p>
-                <span class="modal__link js-modal__link">Proceed to Temporary Site</span>
-            </div>
             <div class="mobile--overlay">
                 <a href="/" class="js-overlay__opt-out overlay__opt-out ga-preview-event">Preview in Browser</a>
                 <a href="/" class="overlay__back-to-dash"><img class="home-icon--small" src="/assets/home_icon.png"></a>
                 <div class="overlay__content">
-                    <p>The browser bars at the top &amp; bottom of the screen interfere with gaming, add Luckee to make them go away.</p>
+                    <p>Adding Luckee to your home screen makes our site full screen &amp; improves the gaming experience</p>
                     <img class="overlay__logo" src="/assets/logo-144.png">
                     <h1 class="overlay__title">Luckee</h1>
                     <p>To install, tap <img class="overlay__bookmark" src="/assets/bookmark.png"> and choose</p>
