--- a/app/views/static_pages/home_mobile.html.erb
+++ b/app/views/static_pages/home_mobile.html.erb
@@ -18,8 +18,10 @@
 		<%= embedded_svg('svgs/trees_and_low_hills.svg', :class => 'tree-hills') %>
 	</div>
 	<div class='bottom-content'>
-        <a href="/signup" class="btn--homepage"> Sign up </a>
-        <a href="/signin" class="btn--homepage btn--no-fill"> Log in </a>
+        <div class="bottom-content__container">
+            <a href="/signup" class="btn--homepage"> Sign up </a>
+            <a href="/signin" class="btn--homepage btn--no-fill"> Log in </a>
+        </div>
     </div>
 </div>
 
