--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
 
-<%= render 'users/form'%>
-
-
-
+<% if @is_mobile %>
+    <%= render 'users/form_mobile'%>
+<% else %>
+    <%= render 'users/form'%>
+<% end %>
