--- a/app/views/users/_form_mobile.html.erb
+++ b/app/views/users/_form_mobile.html.erb
@@ -1,58 +1,54 @@
 <% content_for :body_class, "no-top-padding no-bg register-page" %>
 
-<section class="session-form session-form--mobile">
-        <!-- <div class="welcome-box-m">Play free games. Earn real cash.</div> -->
-        <div class="js-foo">
-        <div class="facebook-login-wrap js-facebook-btn">
-            <%= link_to "/auth/facebook" do %>
-                <button class="btn--form btn--form-fb">
-                    <i class="fa fa-facebook btn--form__icon"></i>
-                    <h1 class="btn--form__copy">Sign up with Facebook</h1>
-                </button><!-- /.btn--form -->
-            <% end %>
-            <p class="form-disclaimer">We won't post anything to Facebook. Promise.</p>
-        </div>
+<img src="/assets/homescreen-logo.png" class="header-img--logo">
 
-        <button class="btn--form btn--form-prime js-show-form">
-            <i class="fa fa-envelope btn--form__icon"></i>
-            <h1 class="btn--form__copy">Sign up with Email</h1>
-        </button><!-- /.btn--form -->
-        </div>
+<div class="form-wrap js-form-wrap">
+    <div class="facebook-login-wrap js-facebook-btn">
+        <%= link_to "/auth/facebook" do %>
+            <button class="btn--form btn--form-fb">
+                <i class="fa fa-facebook btn--form__icon"></i>
+                <h1 class="btn--form__copy">Sign up with Facebook</h1>
+            </button><!-- /.btn--form -->
+        <% end %>
+        <p class="form-disclaimer">We won't post anything to Facebook. Promise.</p>
+    </div>
 
+    <button class="btn--form btn--form-prime js-show-form">
+        <i class="fa fa-envelope btn--form__icon"></i>
+        <h1 class="btn--form__copy">Sign up with Email</h1>
+    </button><!-- /.btn--form -->
+</div>
 
-        <%# image_tag 'email_button.png', :class => 'email-signup' %>
+<div class='form-register js-form-register hidden'>
+    <%= form_for(@user) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+        <div class="form-input--wrap">
+            <i class="fa fa-user"></i>
+            <%= f.text_field :name, placeholder: 'Username', class: "form-input" %>
+        </div><!-- /.form-input--wrap -->
 
-        <div class='form-register js-form-register hidden'>
-            <%= form_for(@user) do |f| %>
-                <%= render 'shared/error_messages', object: f.object %>
-                <div class="form-input--wrap">
-                    <i class="fa fa-user"></i>
-                    <%= f.text_field :name, placeholder: 'Username', class: "form-input" %>
-                </div><!-- /.form-input--wrap -->
+        <div class="form-input--wrap">
+            <i class="fa fa-envelope"></i>
+            <%= f.text_field :email, placeholder: 'Email', class: "form-input" %>
+        </div><!-- /.form-input--wrap -->
 
-                <div class="form-input--wrap">
-                    <i class="fa fa-envelope"></i>
-                    <%= f.text_field :email, placeholder: 'Email', class: "form-input" %>
-                </div><!-- /.form-input--wrap -->
+        <div class="form-input--wrap">
+            <i class="fa fa-lock"></i>
+            <%= f.password_field :password, placeholder: "Password", class: "form-input" %>
+        </div><!-- /.form-input--wrap -->
 
-                <div class="form-input--wrap">
-                    <i class="fa fa-lock"></i>
-                    <%= f.password_field :password, placeholder: "Password", class: "form-input" %>
-                </div><!-- /.form-input--wrap -->
+        <div class="form-input--wrap">
+            <i class="fa fa-lock"></i>
+            <%= f.password_field :password_confirmation, placeholder: "Confirm Password", class: "form-input" %>
+        </div><!-- /.form-input--wrap -->
 
-                <div class="form-input--wrap">
-                    <i class="fa fa-lock"></i>
-                    <%= f.password_field :password_confirmation, placeholder: "Confirm Password", class: "form-input" %>
-                </div><!-- /.form-input--wrap -->
-
-                <div class="form-input--wrap form-input--wrap-submit">
-                    <%= f.submit "Create my account", class: "form-input" %>
-                </div><!-- /.form-input--wrap -->
+        <div class="form-input--wrap form-input--wrap-submit">
+            <%= f.submit "Create my account", class: "form-input" %>
+        </div><!-- /.form-input--wrap -->
 
 
-            <% end %>
-        </div>
-</section>
+    <% end %>
+</div>
 
 <div class='form-swap js-form-swap'>
     <p class="form-swap__copy">Already have an account?</p>  <%= link_to "Sign In", signin_path, class: "form-swap__link" %>
@@ -62,7 +58,7 @@
 <script>
     $(function() {
         $('.js-show-form').click(function(){
-            $('.js-foo').fadeOut(function(){
+            $('.js-form-wrap').fadeOut(function(){
                 $('.js-form-register').fadeIn();
             });
         });
