--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -70,6 +70,9 @@ body {
         .top-title {
             margin: 20px auto 15px;
         }
+        form {
+            margin: 0;
+        }
     }
     &.wam {
         .bottom-content__container {
