--- a/app/views/users/_form_mobile.html.erb
+++ b/app/views/users/_form_mobile.html.erb
@@ -17,38 +17,40 @@
         <i class="fa fa-envelope btn--form__icon"></i>
         <h1 class="btn--form__copy">Sign up with Email</h1>
     </button><!-- /.btn--form -->
-</div>
+</div><!-- /.form-wrap -->
 
-<div class='form-register js-form-register hidden'>
-    <%= form_for(@user) do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
-        <div class="form-input--wrap">
-            <i class="fa fa-user"></i>
-            <%= f.text_field :name, placeholder: 'Username', class: "form-input" %>
-        </div><!-- /.form-input--wrap -->
+<div class="form-wrap">
+    <div class='form-register js-form-register hidden'>
+        <%= form_for(@user) do |f| %>
+            <%= render 'shared/error_messages', object: f.object %>
+            <div class="form-input--wrap">
+                <i class="fa fa-user"></i>
+                <%= f.text_field :name, placeholder: 'Username', class: "form-input" %>
+            </div><!-- /.form-input--wrap -->
 
-        <div class="form-input--wrap">
-            <i class="fa fa-envelope"></i>
-            <%= f.text_field :email, placeholder: 'Email', class: "form-input" %>
-        </div><!-- /.form-input--wrap -->
+            <div class="form-input--wrap">
+                <i class="fa fa-envelope"></i>
+                <%= f.text_field :email, placeholder: 'Email', class: "form-input" %>
+            </div><!-- /.form-input--wrap -->
 
-        <div class="form-input--wrap">
-            <i class="fa fa-lock"></i>
-            <%= f.password_field :password, placeholder: "Password", class: "form-input" %>
-        </div><!-- /.form-input--wrap -->
+            <div class="form-input--wrap">
+                <i class="fa fa-lock"></i>
+                <%= f.password_field :password, placeholder: "Password", class: "form-input" %>
+            </div><!-- /.form-input--wrap -->
 
-        <div class="form-input--wrap">
-            <i class="fa fa-lock"></i>
-            <%= f.password_field :password_confirmation, placeholder: "Confirm Password", class: "form-input" %>
-        </div><!-- /.form-input--wrap -->
+            <div class="form-input--wrap">
+                <i class="fa fa-lock"></i>
+                <%= f.password_field :password_confirmation, placeholder: "Confirm Password", class: "form-input" %>
+            </div><!-- /.form-input--wrap -->
 
-        <div class="form-input--wrap form-input--wrap-submit">
-            <%= f.submit "Create my account", class: "form-input" %>
-        </div><!-- /.form-input--wrap -->
+            <div class="form-input--wrap form-input--wrap-submit">
+                <%= f.submit "Create my account", class: "form-input" %>
+            </div><!-- /.form-input--wrap -->
 
 
-    <% end %>
-</div>
+        <% end %>
+    </div><!-- /.form-register -->
+</div><!-- /.form-wrap -->
 
 <div class='form-swap js-form-swap'>
     <p class="form-swap__copy">Already have an account?</p>  <%= link_to "Sign In", signin_path, class: "form-swap__link" %>
